edited the window grid and button template

--- a/window.xaml
+++ b/window.xaml
@@ -29,7 +29,20 @@ CornerRadius = "10">
     <RadioButton Content = "Home"
                  Height = "50" 
                  Foreground = "White"
-                 FontSize = "14" />
+                 FontSize = "14" 
+                 Style = "{StaticResource MenuButtonTheme}"/>
+
+    <RadioButton Content = "Gallery"
+                 Height = "50" 
+                 Foreground = "White"
+                 FontSize = "14" 
+                 Style = "{StaticResource MenuButtonTheme}"/>
+                  
+    <RadioButton Content = "Profile"
+                 Height = "50" 
+                 Foreground = "White"
+                 FontSize = "14" 
+                 Style = "{StaticResource MenuButtonTheme}"/>
 </StackPanel>
 
 
