--- a/theme/MenuButtonTheme.xaml
+++ b/theme/MenuButtonTheme.xaml
@@ -5,12 +5,12 @@
     <Style.Setters>
       <Setter Property = "Template">
         <Setter.Value>
-          <ControlTemplate>
+          <ControlTemplate TargetType = "RadioButton">
             <Grid VerticalAlignment = "Stretch"
                   HorizontalAlignment = "Stretch"
                   Background = "{TemplateBinding Background}">
 
-              <TextBlock Text = "Hello World!"
+              <TextBlock Text = "{TemplateBinding Property = Content}"
                          VerticalALignment = "Center">
 
             </Grid>
