--- a/theme/MenuButtonTheme.xaml
+++ b/theme/MenuButtonTheme.xaml
@@ -1,6 +1,11 @@
-<ResourceDictionary>
-  <Style BasedOn = "{StaticResource {x:type ToggleButton}}"
-         TargetType = "{x:type ToggleButton}"
+<ResourceDictionary
+xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+  x:Class="SDKSample.DirectionalBinding"
+  xmlns:c="clr-namespace:SDKSample">
+
+  <Style BasedOn = "{StaticResource {x:type RadioButton}}"
+         TargetType = "{x:type RadioButton}"
          x:Key = "MenuButtonTheme">
     <Style.Setters>
       <Setter Property = "Template">
@@ -11,7 +16,7 @@
                   Background = "{TemplateBinding Background}">
 
               <TextBlock Text = "{TemplateBinding Property = Content}"
-                         VerticalALignment = "Center">
+                         VerticalALignment = "Center"/>
 
             </Grid>
           </ControlTemplate>
@@ -27,6 +32,6 @@
       <Trigger Property = "IsChecked" Value = "True">
           <Setter Property = "Background" Value = "#22202f"/>
       </Trigger>
-    </Style.Trigger>
+    </Style.Triggers>
   </Style>
 </ResourceDictionary>
